updates to the project